--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,13 +1,13 @@
-CC=gcc
+CC=g++
 CFLAGS=-Wall -Wextra -g -O1 -fsanitize=address
 
-_SRC=parser.c
+_SRC=instruction.cpp parser.cpp token.cpp
 SRC_DIR=src
 SRC=$(addprefix $(SRC_DIR)/, $(_SRC))
 
 all: main
 
-main: SRC+= $(SRC_DIR)/main.c
+main: SRC+= $(SRC_DIR)/main.cpp
 main:
 	$(CC) $(CFLAGS) $(SRC) $(LDFLAGS) -o main
 
