Finished token detection

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-Wall -Wextra -g -O1 -fsanitize=address
 
-_SRC=instruction.cpp parser.cpp token.cpp
+_SRC=instruction.cpp parser.cpp token.cpp number_utils.cpp
 SRC_DIR=src
 SRC=$(addprefix $(SRC_DIR)/, $(_SRC))
 
