--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-Wall -Wextra -g -O1 -fsanitize=address
+CFLAGS=-Wall -Wextra -g -O1
 
 _SRC=instruction.cpp parser.cpp token.cpp number_utils.cpp
 SRC_DIR=src
@@ -9,7 +9,7 @@ all: main
 
 main: SRC+= $(SRC_DIR)/main.cpp
 main:
-	$(CC) $(CFLAGS) $(SRC) $(LDFLAGS) -o main
+	$(CC) $(CFLAGS) $(SRC) $(LDFLAGS) -o cryxc
 
 
 .PHONY: clean
